flux/infrastructure/opentelemetry/collector/overlays/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opentelemetry-collector
  namespace: open-telemetry-operator
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - otel.monitoring.lab.margays.dev
      secretName: opentelemetry-collector-tls
  rules:
    - host: otel.monitoring.lab.margays.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opentelemetry-collector-collector
                port:
                  number: 4318
